@@ -64,6 +64,12 @@ public class FollowerRequestProcessor extends Thread implements
                 // the request to the leader so that we are ready to receive
                 // the response
                 nextProcessor.processRequest(request);
+                
+                // We now ship the request to the leader. As with all
+                // other quorum operations, sync also follows this code
+                // path, but different from others, we need to keep track
+                // of the sync operations this follower has pending, so we
+                // add it to pendingSyncs.
                 switch (request.type) {
                 case OpCode.sync:
                     zks.pendingSyncs.add(request);
